infrastructure/influxdb/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: influxdb-https
  namespace: influxdb
spec:
  parentRefs:
  - name: crulabs-gateway
    sectionName: websecure
    namespace: gateway-system
  hostnames:
  - "influxdb.crulabs.intern"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: influxdb-influxdb2
      port: 80
